--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </main>
     </div>
 
-    <script src="config.js"></script>
+    <!-- <script src="config.js"></script> --> <!-- Removed as config is now handled by environment variables in the proxy -->
     <script src="afasApi.js"></script>
     <script src="projectService.js"></script>
     <script src="app.js"></script>
