fix: verwijder debug CSS die width-attributen toont in voortgangsbalken

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         }
         
         /* Extra debug CSS om zeker te weten dat de balk zichtbaar is */
-        .progress-bar-inner::after {
+        /* .progress-bar-inner::after {
             content: attr(style);
             position: absolute;
             right: 10px;
             color: black;
             font-size: 10px;
-        }
+        } */
     </style>
 </head>
 <body class="bg-slate-100">
